--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/morgan": "^1.9.4",
+    "express": "^4.18.2",
+    "install": "^0.13.0",
+    "mongoose": "^6.9.2",
+    "morgan": "^1.10.0",
+    "npm": "^9.5.0",
+    "winston": "^3.8.2"
   }
 }
