--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "mongoose": "^6.9.2",
