--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.4",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
