--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "install": "^0.13.0",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
